Archive2/60/643b851d49c745/output
main.cpp:5:28: error: insufficient contextual information to determine type
   decltype(std::declval<C>.insert(std::declval<It>(), typename C::size_type(), std::declval<V>()))
                            ^
main.cpp:5:28: error: insufficient contextual information to determine type
